// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base functionality creates static markup correctly 1`] = `"<style data-emotion-css=\\"1gr5sma\\">.css-1gr5sma{font-size:22px;color:tomato;}</style><h3 class=\\"css-1gr5sma\\">This is a test</h3><p>of the MDX system</p><div>This is also a test</div>"`;

exports[`base functionality hydrates components correctly 1`] = `
<div>
  <h3
    class="css-1gr5sma"
  >
    This is a test
  </h3>
  <p>
    of the MDX system
  </p>
  <div>
    This is also a test
  </div>
</div>
`;

exports[`base functionality renders MDX correctly 1`] = `
Array [
  null,
  <h3
    class="css-1gr5sma"
  >
    This is a test
  </h3>,
  <p>
    of the MDX system
  </p>,
  <div>
    This is also a test
  </div>,
]
`;
